xml과 kt 연결 : 데이터바인딩. 1.gradle 2.xml 3.kt 순으로 편집

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,10 @@ plugins {
 android {
     compileSdk 31
 
+    buildFeatures {
+        dataBinding = true
+    }
+
     defaultConfig {
         applicationId "com.clearsky77.retrofitlibrarytest_20211122"
         minSdk 21
